добавил подсчет очков для каждого игрока на активити с выбором игороков

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="defaultWord">Пусто</string>
     <string name="error">Ошибка</string>
     <string name="noAvailableCards">Нет доступных карт</string>
+    <string name="points">Очки:</string>
 
 
 
